// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Optimizate:  PatchFLags.CLASS 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"class\\": foo
}, null, 2);"
`;

exports[`Optimizate:  PatchFLags.FULL_PROPS: JSXSpreadAttribute + dynamic 1`] = `
"import { mergeProps, createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", mergeProps({ ...obj
}, {
  \\"id\\": foo
}), null, 16);"
`;

exports[`Optimizate:  PatchFLags.FULL_PROPS: JSXSpreadAttribute 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", ...obj, null, 16);"
`;

exports[`Optimizate:  PatchFLags.FULL_PROPS: v-on 1`] = `
"import { toHandlers, createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", toHandlers(refVal.obj), null, 16);"
`;

exports[`Optimizate:  PatchFLags.PROPS 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"id\\": foo
}, null, 8, [\\"id\\"]);"
`;

exports[`Optimizate:  PatchFLags.PROPS/PatchFLags.HYDRATE_EVENTS: v-on-click_middle={} 1`] = `
"import { withModifiers, createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"onMouseup\\": withModifiers(handler, [\\"middle\\"])
}, null, 40, [\\"onMouseup\\"]);"
`;

exports[`Optimizate:  PatchFLags.PROPS/PatchFLags.HYDRATE_EVENTS: v-on-click_right={} 1`] = `
"import { withModifiers, createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"onContextmenu\\": withModifiers(handler, [\\"right\\"])
}, null, 40, [\\"onContextmenu\\"]);"
`;

exports[`Optimizate:  PatchFLags.PROPS/PatchFLags.HYDRATE_EVENTS: v-on-keyup_esc={} 1`] = `
"import { withKeys, createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"onKeyup\\": withKeys(handler, [\\"esc\\"])
}, null, 40, [\\"onKeyup\\"]);"
`;

exports[`Optimizate:  PatchFLags.PROPS: v-on-xxx={} 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"onClick\\": handler
}, null, 8, [\\"onClick\\"]);"
`;

exports[`Optimizate:  PatchFLags.STYLE 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(\\"p\\", {
  \\"style\\": foo
}, null, 4);"
`;

exports[`Optimizate:  PatchFLags: Component v-model-foo_a_b  1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(Comp, {
  \\"foo\\": refVal.value,
  \\"onUpdate:foo\\": $event => refVal.value = $event,
  \\"fooModifiers\\": {
    \\"a\\": true,
    \\"b\\": true
  }
}, null, 8, [\\"foo\\", \\"onUpdate:foo\\", \\"fooModifiers\\"]);"
`;

exports[`Optimizate:  PatchFLags: v-model + input + dynamic type 1`] = `
"import { vModelDynamic, createVNode, withDirectives } from \\"vue\\";
const el = withDirectives(createVNode(\\"input\\", {
  \\"onUpdate:modelValue\\": $event => refVal.value = $event,
  \\"type\\": refType.value
}, null, 8, [\\"onUpdate:modelValue\\", \\"type\\"]), [[vModelDynamic, refVal.value]]);"
`;

exports[`Optimizate:  PatchFLags: v-model + input + dynamic type 2`] = `
"import { vModelDynamic, createVNode, withDirectives } from \\"vue\\";
const el = withDirectives(createVNode(\\"input\\", {
  \\"onUpdate:modelValue\\": $event => refVal.value = $event,
  \\"type\\": refType.value
}, null, 8, [\\"onUpdate:modelValue\\", \\"type\\"]), [[vModelDynamic, refVal.value]]);"
`;

exports[`Optimizate:  PatchFLags: v-model + input 1`] = `
"import { vModelText, createVNode, withDirectives } from \\"vue\\";
const el = withDirectives(createVNode(\\"input\\", {
  \\"onUpdate:modelValue\\": $event => refVal.value = $event
}, null, 8, [\\"onUpdate:modelValue\\"]), [[vModelText, refVal.value]]);"
`;

exports[`Optimizate:  PatchFLags: vModel + dynamic propName 1`] = `
"import { createVNode } from \\"vue\\";
const el = createVNode(Comp, {
  [dynamic]: refVal.value,
  [\\"onUpdate:\\" + dynamic]: $event => refVal.value = $event
}, null, 16);"
`;
